[feature] generic declarations to org.exist.util.hashtable
thanks to Paul Murray

svn path=/trunk/eXist/; revision=11327